--- a/grpc-hello-world/build.gradle
+++ b/grpc-hello-world/build.gradle
@@ -16,19 +16,24 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    version_grpc = '1.49.2'
+    version_junit = '5.9.1'
+}
+
 dependencies {
-    implementation 'io.grpc:grpc-protobuf:1.49.2'
-    implementation "io.grpc:grpc-stub:1.49.2"
+    implementation "io.grpc:grpc-protobuf:${version_grpc}"
+    implementation "io.grpc:grpc-stub:${version_grpc}"
 
     compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
 
-    runtimeOnly "io.grpc:grpc-netty-shaded:1.49.2"
+    runtimeOnly "io.grpc:grpc-netty-shaded:${version_grpc}"
 
     implementation 'org.slf4j:slf4j-api:2.0.3'
     runtimeOnly 'ch.qos.logback:logback-classic:1.4.4'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${version_junit}"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${version_junit}"
 }
 
 protobuf {
@@ -37,7 +42,7 @@ protobuf {
     }
     plugins {
         grpc {
-            artifact = "io.grpc:protoc-gen-grpc-java:1.49.2"
+            artifact = "io.grpc:protoc-gen-grpc-java:${version_grpc}"
         }
     }
     generateProtoTasks {
