--- a/reactive-grpc-rxjava-hello-world/build.gradle
+++ b/reactive-grpc-rxjava-hello-world/build.gradle
@@ -16,45 +16,34 @@ repositories {
     mavenCentral()
 }
 
-ext {
-    version_grpc = '1.49.2'
-    version_rxgrpc = '1.2.3'
-    version_protoc = '3.21.7'
-    version_slf4j = '2.0.3'
-    version_logback = '1.4.4'
-    version_junit = '5.9.1'
-    version_rxjava = '2.2.21'
-}
-
 dependencies {
-    implementation "io.reactivex.rxjava2:rxjava:${version_rxjava}"
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
 
-    implementation "io.grpc:grpc-protobuf:${version_grpc}"
-    implementation "io.grpc:grpc-stub:${version_grpc}"
+    implementation 'io.grpc:grpc-protobuf:1.49.2'
+    implementation 'io.grpc:grpc-stub:1.49.2'
+    runtimeOnly 'io.grpc:grpc-netty:1.49.2'
 
     compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
 
-    runtimeOnly "io.grpc:grpc-netty-shaded:${version_grpc}"
+    implementation 'com.salesforce.servicelibs:rxgrpc-stub:1.2.3'
 
-    implementation "com.salesforce.servicelibs:rxgrpc-stub:${version_rxgrpc}"
+    implementation 'org.slf4j:slf4j-api:2.0.3'
+    runtimeOnly 'ch.qos.logback:logback-classic:1.4.4'
 
-    implementation "org.slf4j:slf4j-api:${version_slf4j}"
-    runtimeOnly "ch.qos.logback:logback-classic:${version_logback}"
-
-    testImplementation "org.junit.jupiter:junit-jupiter-api:${version_junit}"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${version_junit}"
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
 }
 
 protobuf {
     protoc {
-        artifact = "com.google.protobuf:protoc:${version_protoc}"
+        artifact = 'com.google.protobuf:protoc:3.21.7'
     }
     plugins {
         grpc {
-            artifact = "io.grpc:protoc-gen-grpc-java:${version_grpc}"
+            artifact = 'io.grpc:protoc-gen-grpc-java:1.49.2'
         }
         rxgrpc {
-            artifact = "com.salesforce.servicelibs:rxgrpc:${version_rxgrpc}"
+            artifact = 'com.salesforce.servicelibs:rxgrpc:1.2.3'
         }
     }
     generateProtoTasks {
@@ -67,4 +56,16 @@ protobuf {
 
 test {
     useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
+tasks.withType(Javadoc) {
+    options.encoding = 'UTF-8'
+}
+
+tasks.withType(Test) {
+    systemProperty "file.encoding", "UTF-8"
 }
