--- a/grpc-hello-world/build.gradle
+++ b/grpc-hello-world/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
     id 'idea'
-    id 'com.google.protobuf' version '0.9.1'
+    alias(libs.plugins.protobuf)
 }
 
 group 'io.github.aaronchenwei.example'
@@ -17,26 +17,26 @@ repositories {
 }
 
 dependencies {
-    implementation 'io.grpc:grpc-protobuf:1.50.2'
-    implementation 'io.grpc:grpc-stub:1.50.2'
-    runtimeOnly 'io.grpc:grpc-netty:1.50.2'
+    implementation(libs.grpcProtobuf)
+    implementation(libs.grpcStub)
+    runtimeOnly(libs.grpcNetty)
 
-    compileOnly 'javax.annotation:javax.annotation-api:1.3.2'
+    compileOnly(libs.javaxAnnotationApi)
 
-    implementation 'org.slf4j:slf4j-api:2.0.3'
-    runtimeOnly 'ch.qos.logback:logback-classic:1.4.4'
+    implementation(libs.slf4jApi)
+    runtimeOnly(libs.logbackClassic)
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
+    testImplementation(libs.junitJupiterApi)
+    testRuntimeOnly(libs.junitJupiterEngine)
 }
 
 protobuf {
     protoc {
-        artifact = 'com.google.protobuf:protoc:3.21.8'
+        artifact = libs.protoc.get().toString()
     }
     plugins {
         grpc {
-            artifact = 'io.grpc:protoc-gen-grpc-java:1.50.2'
+            artifact = libs.protocGenGrpcJava.get().toString()
         }
     }
     generateProtoTasks {
